# OmochaOS

./: .clang-format  .clocignore  .cquery  .gdbinit  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README_en.md  a.asm  compile_commands.json  kern.asm  mq.sh  run_cloc  snapshot.txt
resource/: OmochaLogo.xcf
src/: .clang_complete  Makefile
src/boot/: .clang_complete  .cquery  Makefile  asm_x86.h  b.sh  boot_sector.asm  boot_sector.c  bs.asm  elf.h  memory_map.h  protect.asm  test_kernel.c
src/boot/common_header/: asm_x86.h
src/boot/stage1/: Makefile  b.sh  boot_sector.asm  boot_sector.c
src/boot/stage2/: Makefile  loader.c
src/boot/tools/: bochsrc_img_template
src/drivers/: Makefile  vga.c
src/header/: config.h  const.h  generic  hardware.h  interrupt.h  klib.h  kmem.h  lib  memlayout.h  modules  paging.h  process.h  protect.h  string.h  syscall.h  type.h
src/header/driver/: vga.h
src/header/kernel/: asm.h  config.h  const.h  hardware.h  interrupt.h  klib.h  memlayout.h  memory.h  paging.h  pm.h  pm.inc  proc.h  process.h  structs.h  type.h
src/header/lib/: asm.h  stdlib.h  string.h
src/header/modules/: hd.h  modules.h
src/header/syscall/: syscall.h
src/header/tools/: h2nasm.py
src/kernel/: .cquery  Makefile  Makefile.bak  hardware.c  interrupt.c  kernel.c  kernel.ld  kmem.c  memory.c  paging.c  pm.c  proc.c  protect.c  start.asm  syscall.c  syscall_k.c  syscall_kernel.c  systask.c  vector_handler.asm  vector_table.asm
src/kernel/core/: 8259A.c  IVT.asm  acpi.c  apic.c  core.c  driver.c  entry.asm  int.asm  interrupt.c  memory.c  pci.c  process.c  protect.c  syscall_sysimpl.c  vector_handler.asm
src/kernel/driver/: 8253.c  8259A.c  acpi.c  apic.c  graphic.c  hpet.c  misc.c  pci.c  port.c
src/kernel/driver/ahci/: ahci.c
src/kernel/header/: memory_map.h  modules.h  paging.h  protect.h  type.h
src/kernel/header/core/: 8259A.h  acpi.h  apic.h  config.h  cpuid.h  environment.h  init.h  interrupt.h  memory.h  msr.h  multiboot.h  paging.h  pci.h  process.h  process.i  protect.h
src/kernel/header/driver/: 8259A.h  acpi.h  apic.h  driver.h  graphic.h  hpet.h  misc.h  pci.h  port.h
src/kernel/header/driver/ahci/: ahci.h
src/kernel/header/generic/: asm.h  syscall.h  systask.h  typedefs.h
src/kernel/header/lib/: bitset.h  elf.h  rbtree.h  stdlib.h  string.h  syscall.h
src/kernel/header/modules/: dev.h  exec.h  fs.h  hd.h  memory.h  modules.h  systask.h  tty.h
src/kernel/header/static/: font_8x13.h  logo.h
src/kernel/headers/arch/: x86_asm.h
src/kernel/headers/sys/: memory.h  paging.h
src/kernel/init/: init.c  package.S
src/kernel/lib/: libos.c  rbtree.c  stdlib.c  string.c
src/kernel/modules/: exec.c  fs.c  hd.c  hd.h  init.c  kbd.c  keymap.h  libos.c  loader.c  memory.c  module_parser.py  monitor.c  monitor.h  sysidle.c  systask.c  test.c  tty.c
src/kernel/modules/device/: dev.c  module.yaml
src/kernel/modules/exec/: exec.c  module.yaml
src/kernel/modules/fs/: fs.c  module.yaml
src/kernel/modules/hd/: hd.c  module.yaml
src/kernel/modules/init/: init.c
src/kernel/modules/memory/: buddy.c  buddy.h  execve.c  exit.c  fork.c  kmem.c  memory.c  memory.h  memory_init.c  module.yaml  pagefault.c  paging.c  paging.h  sbrk.c
src/kernel/modules/systask/: module.yaml  systask.c
src/kernel/modules/tty/: kbd.c  kbd.h  keycode.h  keymap.h  module.yaml  monitor.c  monitor.h  tty.c  tty.h
src/kernel/modules/vfs/: fat32_vfs.c  module.yaml  tty_vfs.c  vfs.c  vfs.h
src/kernel/startup/: core.c  multiboot.h  startup.S  startup.c
src/kernel/tools/: generate_vector.py
src/lib/: .#syscall.c  Makefile  klib.c  stdlib.c  string.c  syscall.c
src/modules/: HD.c  HD.h  KeyBoard.c  KeyBoard.h  Makefile  Monitor.c  Monitor.h  TTY.c  fs.c  hd.c  hd.h  kbd.c  kbd.h  keymap.h  libcrt0.asm  monitor.c  monitor.h  parse_modules.py  tty.c
src/modules/test/: main.c
src/playground/: .cquery
src/playground/fs/: fs.c
tools/: bochsrc_img_template  boot_image.sh  build_image.sh  grub.cfg  run_debug.sh
tools/root_dir/: 1.txt
tools/scripts/: diskimg.sh
